--- a/playlist/style.css
+++ b/playlist/style.css
@@ -17,7 +17,7 @@ aside {
 }
 
 .aside__header {
-    background-image: url(img/BG.jpg);
+    background-image: url(https://www.sunhome.ru/i/wallpapers/144/most-san-francisko-oboi.xxl.jpg);
     background-size: cover;
 }
 
