--- a/form/style.css
+++ b/form/style.css
@@ -6,7 +6,7 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    min-height: 100%;
+    min-height: 80%;
     font-family: 'Open Sans0', sans-serif;
 }
 
@@ -30,7 +30,7 @@ fieldset {
 
 fieldset div, input {
     margin-top: 5px;
-    color: white;
+    color: rgb(250, 193, 193);
     outline: none;
 }
 
